api/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dive25
  labels:
    name: dive25
